adding information about our Team

--- a/src/main/resources/public/about.html
+++ b/src/main/resources/public/about.html
@@ -9,6 +9,46 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </head>
 <body>
+<h1 style="text-align: center">Our Team</h1>
+<div class="accordion" id="accordionExample" style="padding: 50px 0;">
+    <div class="accordion-item">
+        <h2 class="accordion-header" id="headingOne">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                Andruschenko Yaroslav
+            </button>
+        </h2>
+        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+                <strong>Student of IA-03 group.</strong> I have been studying Java and related technologies for a long time. Improving knowledge in the field of Java Core, SQL, DBMS (PostgresSQL, MySQL), Git, Java EE, Algorithms and data structures, mathematics. At the moment I am studying Spring Framework, slowly moving to Hibernate and other technologies.
+            </div>
+        </div>
+    </div>
+    <div class="accordion-item">
+        <h2 class="accordion-header" id="headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                Vadim Kostyanko
+            </button>
+        </h2>
+        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+                <strong>Student of IA-03 group.</strong> I have been studying Kotlin and related technologies for a 2 year. Now I am working in OfferWall where I get new knowledge and develop myself.<br>
+                Also I want to know more about backend that is why I have chosen Spring and microservices courses in KPI
+            </div>
+        </div>
+    </div>
+    <div class="accordion-item">
+        <h2 class="accordion-header" id="headingThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                Stanislav Logvinsky
+            </button>
+        </h2>
+        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+                Hi, my name is Logvynskyy Stanislav, I'm a student of the best group on the flow – IA-03. I have been studying programming for around 5 years, and specifically Java and Java-related technologies for two years now. I'm constantly improving and deepen my knowledge in the field of Java EE, Spring Framework, databases, which include SQL and RDBMS, git, and a little bit of Front-End technologies and Dev Ops.
+            </div>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
