--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -9,33 +9,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </head>
 <body>
-<h1>About us</h1>
-<p>
-    <a class="btn btn-primary" data-bs-toggle="collapse" href="#YAR" role="button" aria-expanded="false" aria-controls="collapseExample">
-        Link with href
-    </a>
-    <a class="btn btn-primary" data-bs-toggle="collapse" href="#VAD" role="button" aria-expanded="false" aria-controls="collapseExample">
-        Link with href
-    </a>
-    <a class="btn btn-primary" data-bs-toggle="collapse" href="#STA" role="button" aria-expanded="false" aria-controls="collapseExample">
-        Link with href
-    </a>
-</p>
+<h1 style="text-align: center">About Our Team</h1>
+<div style="text-align: center">
+    We are highly motivated student. Our aim is to get all knowledge about Spring and related technologies.<br>
 
-<div class="collapse" id="YAR">
-    <div class="card card-body">
+    We will be fine team... We hope...<br><br>
 
-    </div>
+    <a href="/about">About us</a>
 </div>
-<div class="collapse" id="VAD">
-    <div class="card card-body">
 
-    </div>
-</div>
-<div class="collapse" id="STA">
-    <div class="card card-body">
-
-    </div>
-</div>
 </body>
 </html>
