Added our names on the homepage. Created a README for the 1st lab

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -12,13 +12,13 @@
 <h1>About us</h1>
 <p>
     <a class="btn btn-primary" data-bs-toggle="collapse" href="#YAR" role="button" aria-expanded="false" aria-controls="collapseExample">
-        Link with href
+        Andruschenko Yaroslav
     </a>
     <a class="btn btn-primary" data-bs-toggle="collapse" href="#VAD" role="button" aria-expanded="false" aria-controls="collapseExample">
-        Link with href
+        Kostianko Vadym
     </a>
     <a class="btn btn-primary" data-bs-toggle="collapse" href="#STA" role="button" aria-expanded="false" aria-controls="collapseExample">
-        Link with href
+        Logvynskyy Stanislav
     </a>
 </p>
 
